# rona

./: .gitattributes  .gitignore  .mailmap  .rona.example.toml  .rona.toml  CONTRIBUTING.md  Cargo.toml  README.md  hooksmith.yaml
.github/workflows/: SonarQube-Scan.yaml  ci.yml  dependencies.yaml  notify-homebrew-tap.yaml  release.yaml  release_body.md  rust.yaml  tag-on-version-bump.yaml
completions/: rona.bash  rona.elv  rona.fish  rona.ps1  rona.zsh
src/: cli.rs  config.rs  errors.rs  extra_fields.rs  main.rs  performance.rs  template.rs  theme.rs  utils.rs
src/git/: branch.rs  commit.rs  files.rs  mod.rs  remote.rs  repository.rs  staging.rs  status.rs
tests/: cli_tests.rs
